maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:83: error: identifier expected but integer literal found.
    if (getY()>0 && !aMurNord(x,y)) {valDirection[0] = getIndication(x,y-1)}
                                                  ^ShortestPathMaze:83: error: ']' expected but '}' found.
    if (getY()>0 && !aMurNord(x,y)) {valDirection[0] = getIndication(x,y-1)}
                                                                           ^ShortestPathMaze:86: error: identifier expected but integer literal found.
    if (getY()<Hauteur-1 && !aMurNord(x,y+1)) {valDirection[1] = getIndication(x,y+1)}
                                                            ^ShortestPathMaze:86: error: ']' expected but '}' found.
    if (getY()<Hauteur-1 && !aMurNord(x,y+1)) {valDirection[1] = getIndication(x,y+1)}
                                                                                     ^ShortestPathMaze:89: error: identifier expected but integer literal found.
    if (getX()<Largeur-1 && !aMurOuest(x+1,y)) {valDirection[2] = getIndication(x+1,y)}
                                                             ^ShortestPathMaze:89: error: ']' expected but '}' found.
    if (getX()<Largeur-1 && !aMurOuest(x+1,y)) {valDirection[2] = getIndication(x+1,y)}
                                                                                      ^ShortestPathMaze:92: error: identifier expected but integer literal found.
    if (getX()>0 && !aMurOuest(x,y)) {valDirection[3] = getIndication(x-1,y)}
                                                   ^ShortestPathMaze:92: error: ']' expected but '}' found.
    if (getX()>0 && !aMurOuest(x,y)) {valDirection[3] = getIndication(x-1,y)}
                                                                            ^ShortestPathMaze:95: error: ']' expected but '(' found.
    var dirMin = Directions[valDirection.indexOf(valDirection.min)]
                                                ^